Closed
Bug 1493335
Opened 7 years ago
Closed 7 years ago
Perma Tier 2 Assertion failure: false (JS_GetProperty(cx, module, "float32"|"int32", &typeDescr)), at /builds/worker/workspace/build/src/js/src/builtin/TypedObject.cpp:1421
Categories
(Core :: JavaScript: Standard Library, defect, P5)
Core
JavaScript: Standard Library
Tracking
()
RESOLVED
FIXED
mozilla64
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox62 | --- | unaffected |
| firefox63 | --- | unaffected |
| firefox64 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: lth)
References
Details
(Keywords: assertion, intermittent-failure)
Attachments
(1 file)
|
2.06 KB,
patch
|
jseward
:
review+
|
Details | Diff | Splinter Review |
Filed by: btara [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=200905461&repo=mozilla-central
https://queue.taskcluster.net/v1/task/fNCxOXG1RIOBSXW9NnEz6g/runs/0/artifacts/public/logs/live_backing.log
[task 2018-09-22T00:38:49.997Z] 00:38:49 INFO - TEST-PASS | tests/jit-test/jit-test/tests/basic/bug1300904.js | Success (code 0, args "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads") [0.7 s]
[task 2018-09-22T00:38:49.997Z] 00:38:49 INFO - {"action": "test_start", "jitflags": "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads", "pid": 24161, "source": "jittests", "test": "basic/bug1300904.js", "thread": "main", "time": 1537576729.326567}
[task 2018-09-22T00:38:49.997Z] 00:38:49 INFO - {"action": "test_end", "extra": {"jitflags": "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads", "pid": 24161}, "jitflags": "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads", "message": "Success", "pid": 24161, "source": "jittests", "status": "PASS", "test": "basic/bug1300904.js", "thread": "main", "time": 1537576729.992409}
[task 2018-09-22T00:38:50.317Z] 00:38:50 INFO - [CodeCoverage] Setting handlers for process 24163.
[task 2018-09-22T00:38:50.317Z] 00:38:50 INFO - Assertion failure: false (JS_GetProperty(cx, module, "int32", &typeDescr)), at /builds/worker/workspace/build/src/js/src/builtin/TypedObject.cpp:1421
[task 2018-09-22T00:38:50.317Z] 00:38:50 INFO - Exit code: -11
[task 2018-09-22T00:38:50.318Z] 00:38:50 INFO - FAIL - basic/bug1300904.js
[task 2018-09-22T00:38:50.318Z] 00:38:50 WARNING - TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/basic/bug1300904.js | [CodeCoverage] Setting handlers for process 24163. (code -11, args "--baseline-eager") [0.6 s]
[task 2018-09-22T00:38:50.318Z] 00:38:50 INFO - {"action": "test_start", "jitflags": "--baseline-eager", "pid": 24163, "source": "jittests", "test": "basic/bug1300904.js", "thread": "main", "time": 1537576729.7506}
[task 2018-09-22T00:38:50.318Z] 00:38:50 INFO - {"action": "test_end", "extra": {"jitflags": "--baseline-eager", "pid": 24163}, "jitflags": "--baseline-eager", "message": "[CodeCoverage] Setting handlers for process 24163.", "pid": 24163, "source": "jittests", "status": "FAIL", "test": "basic/bug1300904.js", "thread": "main", "time": 1537576730.312519}
[task 2018-09-22T00:38:50.319Z] 00:38:50 INFO - INFO exit-status : -11
[task 2018-09-22T00:38:50.319Z] 00:38:50 INFO - INFO timed-out : False
[task 2018-09-22T00:38:50.319Z] 00:38:50 INFO - INFO stderr 2> [CodeCoverage] Setting handlers for process 24163.
[task 2018-09-22T00:38:50.319Z] 00:38:50 INFO - INFO stderr 2> Assertion failure: false (JS_GetProperty(cx, module, "int32", &typeDescr)), at /builds/worker/workspace/build/src/js/src/builtin/TypedObject.cpp:1421
[task 2018-09-22T00:38:50.339Z] 00:38:50 INFO - TEST-PASS | tests/jit-test/jit-test/tests/basic/bug1301797.js | Success (code 0, args "") [0.3 s]
Updated•7 years ago
|
Summary: Intermittent Tier 2 Assertion failure: false (JS_GetProperty(cx, module, "int32", &typeDescr)), at /builds/worker/workspace/build/src/js/src/builtin/TypedObject.cpp:1421 → Intermittent Tier 2 Assertion failure: false (JS_GetProperty(cx, module, "float32"|"int32", &typeDescr)), at /builds/worker/workspace/build/src/js/src/builtin/TypedObject.cpp:1421
Comment 1•7 years ago
|
||
This appears to be from Bug 1459900. Lars, can you take a look?
Flags: needinfo?(lhansen)
Summary: Intermittent Tier 2 Assertion failure: false (JS_GetProperty(cx, module, "float32"|"int32", &typeDescr)), at /builds/worker/workspace/build/src/js/src/builtin/TypedObject.cpp:1421 → Perma Tier 2 Assertion failure: false (JS_GetProperty(cx, module, "float32"|"int32", &typeDescr)), at /builds/worker/workspace/build/src/js/src/builtin/TypedObject.cpp:1421
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → lhansen
Status: NEW → ASSIGNED
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 4•7 years ago
|
||
Flags: needinfo?(lhansen)
Attachment #9011434 -
Flags: review?(jseward)
| Comment hidden (Intermittent Failures Robot) |
Comment 6•7 years ago
|
||
Comment on attachment 9011434 [details] [diff] [review]
bug1493335-handle-oom.patch
Review of attachment 9011434 [details] [diff] [review]:
-----------------------------------------------------------------
Looks fine.
::: js/src/builtin/TypedObject.cpp
@@ +1418,5 @@
>
> RootedValue typeDescr(cx);
>
> + // The lookups should fail only from atomization-related OOM in
> + // JS_GetProperty(), the properties should always be there.
Nit: kinda confusing run-on sentence. Maybe ".. JS_GetProperty(). The properties themselves will always exist."
Attachment #9011434 -
Flags: review?(jseward) → review+
Pushed by lhansen@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e8e30b10e75d
handle obscure oom path during initialization. r=jseward
Comment 8•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox64:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
| Comment hidden (Intermittent Failures Robot) |
Updated•7 years ago
|
status-firefox62:
--- → unaffected
status-firefox63:
--- → unaffected
status-firefox-esr60:
--- → unaffected
Keywords: assertion
| Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•