Bug 1493335 - handle obscure oom path during initialization. r=jseward

When initializing the hidden slots of the TypedObject module with
values that will be used by wasm, we grab some pre-created type
descriptor values from the object; we should never get to this point
if those values don't already exist.  But the get-property action can
itself allocate during string atomization, and therefore it can signal
an OOM.  So it is incorrect to assume that the lookup will always
succeed.

--HG--
extra : rebase_source : b68bc5b7a2c654757cb27b7ee80952adf6196fac